On JDK21, Spring 6.1